<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_sync"
        android:icon="?refresh"
        android:showAsAction="always"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/menu_insert"
        android:icon="?title_btn_add"
        android:showAsAction="always"
        android:title="@string/menu_insert"/>
    <item
        android:id="@+id/sort_by"
        android:icon="@drawable/ic_menu_sort"
        android:showAsAction="never"
        android:title="@string/sort_by"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="never"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>