<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

      <item
        android:id="@+id/menu_insert"
        android:showAsAction="always"
        android:icon="?title_btn_add"
        android:title="@string/menu_insert"/>
      <item
        android:id="@+id/menu_discard"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_discard"/>
    <item
        android:id="@+id/menu_delete"
        android:showAsAction="never"
        android:icon="?ic_menu_trash"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_share"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_move_to"
        android:showAsAction="never"
        android:icon="@drawable/ic_list_move_dark"
        android:title="@string/menu_move_to"/>

</menu>