<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?g_main_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/account_authen_edit_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" >

                <EditText
                    android:id="@+id/account_authen_edit_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:gravity="fill_horizontal"
                    android:hint="@string/edit_login_username"
                    android:inputType="textEmailAddress"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:background="?g_edittext"
                    android:textColorHint="?g_hintTextColor"
                    android:textColor="?g_primaryTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/account_authen_edit_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:hint="@string/edit_login_password"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:background="?g_edittext"
                    android:textColorHint="?g_hintTextColor"
                    android:textColor="?g_primaryTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

              <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/login_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:checked="false"
            android:text="@string/checkbox_show_passwd"
            android:textAppearance="@style/g_listitem_SmallText"
            android:button="?checkbox_holo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dip" >

                <ProgressBar
                    android:id="@+id/account_authen_progress"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/account_authen_warning_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_warning"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/account_authen_warning_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:text="@string/text_login_wait"
                    android:textAppearance="?g_listitem_SmallText"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?theme_bottombar_bg"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingTop="8dip" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="?theme_bottombar_top_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/account_authen_manual"
                style="?g_buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/account_setup_manual_setup_btn" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:scaleType="fitXY"
                android:src="?theme_bottombar_centre_divider" />

            <Button
                android:id="@+id/account_authen_confirm"
                style="?g_buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/account_setup_btn_next" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>