<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?g_main_bg"
     >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:listSelector="?actionBarItemBackground"
        android:cacheColorHint="#00000000"
        android:drawSelectorOnTop="true"
        android:scrollbars="none"
        android:layout_centerVertical="true" />
    <TextView 
        android:id="@+id/list_empty_view"
        android:text="@string/list_empty_text"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:textAppearance="?g_listitem_LargeTextDone" 
        android:paddingTop="18dp"
        />
    
   <LinearLayout
        android:id="@+id/sortby_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?actionModeSplitBackground"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/sortby_creat_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sortby_creat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_creat_down" />
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_create_time"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/sortby_modify_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sortby_modify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_modify_down" />
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_modify_time"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/sortby_az_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sortby_az"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_name_down" />
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_a_z"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
