<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--<ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:listSelector="?actionBarItemBackground"
        android:cacheColorHint="#00000000"
        android:dividerHeight="0dp"
        android:divider="@color/spinner_label"
        android:drawSelectorOnTop="true"
        android:scrollbars="none"
        android:layout_centerVertical="true"/>-->

    <TextView
        android:id="@+id/list_empty_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textAppearance="?g_listitem_LargeTextDone"
        android:paddingTop="18dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add_white_48dp"
        app:borderWidth="0dp"/>

    <LinearLayout
        android:id="@+id/sortby_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?actionModeSplitBackground"
        android:gravity="center_vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/sortby_creat_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sortby_creat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_creat_down"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_create_time"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sortby_modify_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sortby_modify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_modify_down"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_modify_time"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sortby_az_layout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?actionBarItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sortby_az"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dip"
                android:src="@drawable/ic_sortby_name_down"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="4dip"
                android:text="@string/sort_a_z"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>